--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.0",
     "react-apollo": "^2.5.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-showdown": "^0.4.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
